------------------------------------------------------------------------------------

>>> NOTICE!!! <<<

This file contains SPOILERS, which might ruin your IVAN experience totally. The file
is also provided AS IS and is probably completely unreadable.

------------------------------------------------------------------------------------
August 20 2004 Heikki Sairanen <firstname.lastname@tut.fi>

	* Monsters think webs are dangerous

August 20 2004 Heikki Sairanen <firstname.lastname@tut.fi>

	* Sophos changed to also god of handicrafts

August 20 2004 Heikki Sairanen <firstname.lastname@tut.fi>

	* panel changes

August 20 2004 Heikki Sairanen <firstname.lastname@tut.fi>

	* more webs
	

August 19 2004 Heikki Sairanen <firstname.lastname@tut.fi>

	* webs added... atleast some fraction of them


August 17 2004 Heikki Sairanen <firstname.lastname@tut.fi>

	* smith and tailor work with equiped items now too.
	* changed tailor replies

August 6 2004 Heikki Sairanen <firstname.lastname@tut.fi>

	* blue color cursor for run mode
	* some typo corrected
	* bananapeels can be resurrected
	* monster portal in Oree level
	* X swimming here now ok

August 5 2004 Heikki Sairanen <firstname.lastname@tut.fi>

	* bomb displacing energy field in Attnam

August 5 2004 Heikki Sairanen <firstname.lastname@tut.fi>

	* Food added to UT
	* wskill with no exp that are used are shown on wskill screen

July 14 2004 Heikki Sairanen <firstname.lastname@tut.fi>

	* Vladimir works

July 14 2004 Heikki Sairanen <firstname.lastname@tut.fi>

	* Vladimir works better, but far from perfect
	

July 13 2004 Heikki Sairanen <firstname.lastname@tut.fi>

	* Makefile corrections (couple of missing files)
	* Moved Polymorph command in cpp to only wizard mode compiles..
	
July 8 2004 Heikki Sairanen <firstname.lastname@tut.fi>

	* Minor correction to fountains...
	
July 8 2004 Heikki Sairanen <firstname.lastname@tut.fi>

	* Added wizard mode command Polymorph (key '[')
