@@ -6,6 +6,10 @@ This file contains SPOILERS, which might ruin your IVAN experience totally. The 
 is also provided AS IS and is probably completely unreadable.
 
 ------------------------------------------------------------------------------------
+August 25 2004 Heikki Sairanen <firstname.lastname@tut.fi>
+
+	* Timing works. Although fetime:: is still a bit incomplete
+
 August 20 2004 Heikki Sairanen <firstname.lastname@tut.fi>
 
 	* Monsters think webs are dangerous
